# 05-chat

./: .gitignore  Cargo.toml  README.md  _typos.toml  cliff.toml
chat-server/: Cargo.toml  app.yaml  test.http
chat-server/src/: config.rs  lib.rs  main.rs
chat-server/src/handler/: chat.rs  mod.rs  user.rs
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
