[workspace]
members = ["chat-server", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["net", "rt-multi-thread", "tracing", "rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
